# EntropiaGrafos

./: .gitignore  Com Polarização.ipynb  Experiment1_Analysis.ipynb  Experiment2_Analysis.ipynb  Experiment3_Analysis.ipynb  Experiment_1.py  Experiment_10.py  Experiment_11.py  Experiment_13.py  Experiment_14.py  Experiment_15.py  Experiment_2.py  Experiment_3.py  Experiment_5.py  Experiment_7.py  Experiment_8.py  Experiment_9.py  GridSimulation.py  Modelo.ipynb  NetworkX - Study.ipynb  Plots e Analise.ipynb  Plotting Functions.ipynb  Plotting.py  README.md  Sem Polarização.ipynb  Testing Functions.ipynb  Testing New Model.ipynb  Untitled-1.ipynb  Untitled.ipynb  credentials.json  environment.yml  experiment_1.py  experiment_2.py  experiment_2_.py  experiment_3.py  experiment_barabasi_with_polarization.json  experiment_barabasi_with_polarization_grouping_1.json  experiment_barabasi_with_polarization_grouping_2.json  experiment_complete_with_polarization.json  experiment_mu_2_barabasi.json  (+19 more)
.ipynb_checkpoints/: Com Polarização-checkpoint.ipynb  Experiment1_Analysis-checkpoint.ipynb  Experiment3_Analysis-checkpoint.ipynb  Experiment_7-checkpoint.py  Modelo-checkpoint.ipynb  Plotting-checkpoint.py  PlottingFunctions-checkpoint.py  Sem Polarização-checkpoint.ipynb  Testing GraphTool-checkpoint.ipynb  Testing New Model-checkpoint.ipynb  Untitled-checkpoint.ipynb  [Experiment 13] Aalysis-checkpoint.ipynb  experiment_1-checkpoint.py  experiment_2-checkpoint.py  experiment_4-checkpoint.py  experiment_5-checkpoint.py  experiment_barabasi_with_polarization_grouping_1-checkpoint.json  (+2 more)
(+591 files in other folders)
